# libgiac-julia-wrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  justfile  meson.build  meson.options
.github/workflows/: ci.yml
cmake/: FindGIAC.cmake
diagnostics/: probe_gen_layout.cpp
src/: CMakeLists.txt  context.cpp  gen.cpp  giac_cabi.cpp  giac_cabi.h  giac_cabi_adapter.h  giac_impl.cpp  giac_impl.h  giac_wrapper.cpp  giac_wrapper.h  meson.build  warnings.cpp
tests/cpp/: CMakeLists.txt  meson.build  test_context.cpp  test_eval.cpp  test_extraction.cpp  test_gen.cpp  test_predicates.cpp  test_warnings.cpp
tests/julia/: runtests.jl  test_context.jl  test_convert.jl  test_display.jl  test_eval.jl  test_gen.jl  test_highlevel.jl  test_indexing.jl  test_introspection.jl  test_iteration.jl  test_symbolic.jl  test_to_julia.jl  test_warnings.jl
